all project added

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" id="teaching" href="#" data-en="Work Experience">
+						<a class="nav-link" id="teaching" href="#" data-en="Teaching">
 						</a>
 					</li>
 
@@ -110,8 +110,8 @@
 			<div class="col-md-3 language">
 				<div class="row mb-3">
 					<div class="col">
-						<img src="images/DP.jpg" class="rounded me-auto d-block img-fluid profilepicture"
-							alt="Fatema Khan profile picture">
+						<img src="images/DP.jpg" class="rounded me-auto d-block img-fluid profilepicture" style="
+						border-radius: 50% 50% 50% 50% !important;!i;!;" alt="Fatema Khan profile picture">
 					</div>
 				</div>
 
@@ -423,9 +423,7 @@
 								<span class="pub-force-margin-left"> <i class="fas fa-quote-left"></i> <a href="#"
 										id="citation" class="link-dark">BibTeX</a></span>
 							</div>
-							<div class="d-none">
-
-								}</div>
+							<div class="d-none"></div>
 						</div>
 						<p></p>
 
@@ -442,28 +440,130 @@
 						<div class="col-sm-6">
 							<div class="card">
 								<div class="card-body">
-									<h5 class="card-title">Bugs and Flowers Detection and Classification Using YOLOv3 and OpenCV</h5>
+									<h5 class="card-title">1. Sentiment Analysis of Amazon Magazine Reviews using NLP
+										models</h5>
 									<p class="card-text">
-										The project aims to detect whether a given image contains flowers or bugs. The YOLOv3 (You Only Look Once) Algorithm is used to accomplish the task. This algorithm utilizes anchor boxes, which are able to detect multiple objects that can even overlap each other. 
+										This project involves the analysis of customer sentiments in Amazon
+										magazine reviews obtained from a Kaggle dataset to classify sentiments as
+										positive, negative, or neutral by comparing the performance of various NLP
+										models. The study aims to identify the most accurate approach for
+										sentiment classification.
 									</p>
-									<a href="bugs-and-flowers.html" class="btn btn-primary">See Details</a>
+									<a href="project-1.html" class="btn btn-primary">See Details</a>
 								</div>
 							</div>
 						</div>
 						<div class="col-sm-6">
 							<div class="card">
 								<div class="card-body">
-									<h5 class="card-title">Special title treatment</h5>
-									<p class="card-text">With supporting text below as a natural lead-in to additional
-										content.</p>
-									<a href="#" class="btn btn-primary">Go somewhere</a>
+									<h5 class="card-title">2. Real-Time Traffic Monitoring at Dhaka’s Road Intersections
+									</h5>
+									<p class="card-text">
+										A real-time traffic data collection and monitoring system is developed to
+										facilitate the implementation of smart cities in
+										developing countries like Bangladesh using a vision-based approach.
+										In this work, various types of vehicle images such as cars, buses, trucks,
+										motorcycles, and and three-wheelers are captured
+										from different roads of Dhaka city.
+									</p>
+									<a href="project-2.html" class="btn btn-primary">See Details</a>
+								</div>
+							</div>
+						</div>
+					</div><br>
+					<div class="row">
+						<div class="col-sm-6">
+							<div class="card">
+								<div class="card-body">
+									<h5 class="card-title">3. Enhancing Classification Robustness: Stability Analysis of
+										Fuzzy and Shannon Entropy of Image under Noisy
+										Environment
+									</h5>
+									<p class="card-text">
+										Considering the ubiquity of digital images and their noise issues during
+										acquisition, this study aims to explores the
+										concepts of Fuzzy entropy and Shannon entropy as potential features to enhance
+										image recognition in noisy
+										conditions.
+										To obtain this goal: A formulated algorithm is...
+									</p>
+									<a href="project-3.html" class="btn btn-primary">See Details</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-6">
+							<div class="card">
+								<div class="card-body">
+									<h5 class="card-title">4. An Automated Approach for Fruit Leaf Disease Recognition
+									</h5>
+									<p class="card-text">
+										Tomatoes is both economically beneficial and has great benefits health-wise. But
+										due to unawareness and not knowing about the pathogen attacks, our farmers
+										suffer
+										greatly.
+										In this project, an efficient way is provided to identify and recognize the
+										diseases that affect the cultivation of tomatoes in Bangladesh. The work was
+										done
+										on a custom dataset.
+									</p>
+									<a href="project-4.html" class="btn btn-primary">See Details</a>
+								</div>
+							</div>
+						</div>
+					</div><br>
+					<div class="row">
+						<div class="col-sm-6">
+							<div class="card">
+								<div class="card-body">
+									<h5 class="card-title">5. Traffic Object Detection in Real-Time Videos </h5>
+									<p class="card-text">
+										The project aims to detect traffic objects in video files using the YOLOv3(You
+										Only Look Once) model for real-time object detection.
+										The work involves reading a video file, feeding each frame through a pre-trained
+										YOLOv3 model to identify objects in each frame, and
+										visualizing the processed video with labelled bounding boxes around detected
+										objects in real-time.
+									</p>
+									<a href="project-5.html" class="btn btn-primary">See Details</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-6">
+							<div class="card">
+								<div class="card-body">
+									<h5 class="card-title">6. Bugs and Flowers Detection and Classification Using YOLOv3
+										and OpenCV</h5>
+									<p class="card-text">
+										The project aims to detect whether a given image contains flowers or bugs. The
+										YOLOv3 (You Only Look Once)
+										Algorithm is used to accomplish the task. This algorithm utilizes anchor boxes,
+										which are able to detect multiple
+										objects that can even overlap each other. A non-max suppression algorithm is run
+										on each class to avoid showing...
+									</p>
+									<a href="project-6.html" class="btn btn-primary">See Details</a>
+								</div>
+							</div>
+						</div>
+					</div><br />
+					<div class="row">
+						<div class="col-sm-6">
+							<div class="card">
+								<div class="card-body">
+									<h5 class="card-title">SecurityCat: A Simple Ultrasonic Radar System</h5>
+									<p class="card-text"> An ultrasonic sensor is attached to an Arduino microcontroller
+										to build the
+										system. The TRIG pin is used to send sound waves, and the ECHO pin is
+										used to receive them. A servo motor is connected to the Arduino, which
+										rotates the sensor in small steps (15° to 165°) to cover a wide area. </p>
+									<a href="project-7.html" class="btn btn-primary">See Details</a>
 								</div>
 							</div>
 						</div>
 					</div>
-
-
 				</div>
+
+
 			</div>
 
 			<div class="col-md-8 offset-md-1 mb-5" id="teachingContent">
@@ -528,6 +628,7 @@
 			</div>
 		</div>
 	</div>
+	<!-- </div> -->
 
 	<!-- Scripts -->
 	<script src="js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
