--- a/project-3.html
+++ b/project-3.html
@@ -65,27 +65,58 @@
 		<div class="row content">
 
 			<!-- About Me -->
-			<div class="col-md-8 offset-md-1 mb-5 active" id="aboutmeContent">
+			<div class="col-md-8 offset-md-2 mb-5 active" id="aboutmeContent">
 				<div class="container">
 					<div class="row language">
-						<h4 id="researchinterestsH4" class="mt-2" data-es="Áreas de Investigación"
-							data-en="Bugs and Flowers Detection and Classification  Using YOLOv3 and OpenCV">
+						<h4 id="researchinterestsH4" class="mt-2" data-es="Enhancing Classification Robustness: Stability Analysis of Fuzzy and Shannon Entropy of Image under Noisy 
+						Environment" data-en="Enhancing Classification Robustness: Stability Analysis of Fuzzy and Shannon Entropy of Image under Noisy 
+							Environment">
 						</h4>
+						<img src="assets/project/project-3-1.jpg" alt=""><br/>
 						<p>
-							The project aims to detect whether a given image contains flowers or bugs. The YOLOv3 (You Only Look Once) Algorithm is used to accomplish the task. This algorithm utilizes anchor boxes, which are able to detect multiple objects that can even overlap each other. A non-max suppression algorithm is run on each class to avoid showing multiple boxes for the same object. Three hundred images are collected, containing bugs, flowers, both or none and labeled with the LabelImgtool. Then the YOLOv3 model is trained with the custom dataset. The result shows that the model is able to effectively detect the location of bugs and flowers in most cases. This model has shown some difficulty in detecting bugs in some images. However, it effectively detects multiple overlapping images, which is the case in many of the pictures found.
+							Considering the ubiquity of digital images and their noise issues during acquisition, this
+							study aims to explores the
+							concepts of Fuzzy entropy and Shannon entropy as potential features to enhance image
+							recognition in noisy
+							conditions.
 						</p>
+						<img src="assets/project/project-3-2.jpg" alt=""><br/>
 						<p>
-							[By extending the scope to other object classes and improving accuracy with larger and more diverse datasets, the project could become an essential tool in precision agriculture, biodiversity studies, and environmental monitoring.]<br>Or [This project demonstrates practical applications of object detection in domains like ecology and agriculture, where identifying bugs and flowers in images can support tasks such as pest control and plant health monitoring]
+							To obtain this goal: A formulated algorithm is used to determine fuzzy entropy, its maximum
+							value varying six parameters for
+							all the input images. Shannon entropy is calculated from grayscale image directly. Then the
+							impact of Additive White
+							Gaussian Noise (AWGN) on obtained maximum fuzzy and Shannon entropy is observed varying SNR
+							using
+							another algorithm. Second stage of this research involves in combining the most stable
+							feature acquired from the
+							analysis with MLs to classify image sets and comparing their performance with CNN and LSTM
+							under noisy
+							environment.
 						</p>
-						<p>This project can be used for automated pest detection and crop monitoring in agriculture, wildlife conservation, and environmental research.</p>
+						<img src="assets/project/project-3-3.jpg" alt=""><br/>
 						<p>
-							<strong>Frameworks and Toolkits Used:</strong><br>
-							<ul>
-								<li><strong>Framework:</strong> YOLOv3 (You Only Look Once, version 3)</li>
-								<li><strong>Toolkit:</strong> OpenCV (for image processing and display), NumPy (for numerical operations)</li>
-								<li><strong>Environment:</strong> Python</li>
-							</ul>
+							From the analysis, fuzzy entropy is found more stable against SNR. Again, fuzzy entropy
+							parameters combined
+							with MLs classifiers show better stability of accuracy with variation of SNR compared to CNN
+							and LSTM where images were
+							applied directly.
 						</p>
+						<img src="assets/project/project-3-4.jpg" alt=""><br/>
+						<img src="assets/project/project-3-5.jpg" alt=""><br/>
+						<p>
+							This study, proves the effectiveness of fuzzy entropy as a feature. Future of this work
+							includes: combine the ‘fuzzy
+							entropy vector’ with other features like SURF, SIFT, HOG, DWT parameters etc., to observe
+							any improvement of
+							image recognition, matching, and reconstruction within short process time compared to deep
+							learning NN. Again,
+							several MLs under the ‘feature vector of fuzzy entropy’ will be combined to improve the
+							accuracy of detection and
+							the same technique will also be used on other two multimedia data: audio and video.
+						</p>
+						<img src="assets/project/project-3-6.jpg" alt=""><br/>
+						<img src="assets/project/project-3-7.jpg" alt=""><br/>
 					</div>
 				</div>
 			</div>
