--- a/project-1.html
+++ b/project-1.html
@@ -65,15 +65,15 @@
 		<div class="row content">
 
 			<!-- About Me -->
-			<div class="col-md-8 offset-md-2 mb-5 active" id="aboutmeContent">
+			<div class="col-md-9 offset-md-2 mb-5 active" id="aboutmeContent">
 				<div class="container">
 					<div class="row language">
-						<h4 id="researchinterestsH4" class="mt-2" data-es="Sentiment Analysis of Amazon Magazine Reviews 
+						<h3 id="researchinterestsH4" class="mt-2 project-color" data-es="Sentiment Analysis of Amazon Magazine Reviews 
 						using NLP models" data-en="Sentiment Analysis of Amazon Magazine Reviews 
 							using NLP modelsV">
-						</h4>
-						<img src="assets/project/project-1-1.jpg" alt="">
-						<p>
+						</h3>
+						<h3 class="text-center project-color">Overview</h3>
+						<p class="project-overview">
 							This project involves the analysis of customer sentiments in Amazon
 							magazine reviews obtained from a Kaggle dataset to classify sentiments as
 							positive, negative, or neutral by comparing the performance of various NLP
@@ -88,6 +88,10 @@
 							domains, offering a practical solution for businesses to understand and act
 							on customer opinions at scale
 						</p>
+						<h3 class="text-center project-color">Method </h3>
+						<img src="assets/project/project-1-1.jpg" alt="">
+						<h3 class="text-center project-color">Result </h3>
+						<img src="assets/project/project-1-1.jpg" alt="">
 					</div>
 				</div>
 			</div>
