--- a/project-2.html
+++ b/project-2.html
@@ -65,15 +65,15 @@
 		<div class="row content">
 
 			<!-- About Me -->
-			<div class="col-md-8 offset-md-2 mb-5 active" id="aboutmeContent">
+			<div class="col-md-9 offset-md-2 mb-5 active" id="aboutmeContent">
 				<div class="container">
 					<div class="row language">
-						<h4 id="researchinterestsH4" class="mt-2"
+						<h3 id="researchinterestsH4" class="mt-2 project-color"
 							data-es="Real-Time Traffic Monitoring at Dhaka’s Road Intersections"
 							data-en="Real-Time Traffic Monitoring at Dhaka’s Road Intersections">
-						</h4><br/>
-						<img src="assets/project/project-2-1.jpg" alt=""><br/>
-						<p><br/>
+						</h3>
+						<h3 class="text-center project-color">Overview</h3>
+						<p class="project-overview">
 							A real-time traffic data collection and monitoring system is developed to facilitate the
 							implementation of smart cities in
 							developing countries like Bangladesh using a vision-based approach.
@@ -95,9 +95,7 @@
 							the counts of vehicles and average
 							speed at regular intervals, typically every 10 seconds.
 						</p>
-						<img src="assets/project/project-2-2.jpg" alt=""><br/>
-						<img src="assets/project/project-2-4.jpg" alt=""><br/>
-						<p>
+						<p class="project-overview">
 							The CSV file can be served as a valuable resource for traffic monitoring, trend analysis,
 							prediction, and decision
 							making in various applications, including urban planning and transportation management.
@@ -105,7 +103,16 @@
 							format, the data can be easily imported into other data analysis tools and platforms for
 							more in-depth analysis and
 							visualization, enhancing the versatility and usability of the system’s output.
-						</p><br/>
+						</p>
+						<h3 class="text-center project-color">Method </h3>
+						<img src="assets/project/project-2-1.jpg" alt=""><br/>
+						<img src="assets/project/project-2-2.jpg" alt=""><br/>
+						<img src="assets/project/project-2-4.jpg" alt=""><br/>
+						<img src="assets/project/project-2-3.jpg" alt="">
+						<h3 class="text-center project-color">Result </h3>
+						<img src="assets/project/project-2-1.jpg" alt=""><br/>
+						<img src="assets/project/project-2-2.jpg" alt=""><br/>
+						<img src="assets/project/project-2-4.jpg" alt=""><br/>
 						<img src="assets/project/project-2-3.jpg" alt="">
 					</div>
 				</div>
