--- a/project-4.html
+++ b/project-4.html
@@ -68,22 +68,23 @@
 			<div class="col-md-8 offset-md-2 mb-5 active" id="aboutmeContent">
 				<div class="container">
 					<div class="row language">
-						<h4 id="researchinterestsH4" class="mt-2" data-es="An Automated Approach for Fruit Leaf 
+						<h3 id="researchinterestsH4" class="mt-2" data-es="An Automated Approach for Fruit Leaf 
 						Disease Recognition" data-en="An Automated Approach for Fruit Leaf 
 							Disease Recognition">
-						</h4>
-						<img src="assets/project/project-4-1.jpg" alt="">
-						<p><br/>
+						</h3>
+						<h3 class="text-center project-color">Overview</h3>
+						<p class="project-overview"><br />
 							Bangladesh is heavily reliant on agriculture as a developing nation. Cultivation of
 							Tomatoes is both economically beneficial and has great benefits health-wise. But
 							due to unawareness and not knowing about the pathogen attacks, our farmers suffer
 							greatly.
-							<span style="background-color: rgb(241, 241, 99);"> this project, an efficient way is provided to identify
+							<span style="background-color: rgb(241, 241, 99);"> this project, an efficient way is
+								provided to identify
 								and recognize the
 								diseases that affect the cultivation of tomatoes in Bangladesh. The work was done
 								on a custom dataset.</span>
 						</p>
-						<p>
+						<p class="project-overview">
 							Here, 500 digital images of tomato leaves, including healthy and unhealthy, were collected
 							from several crop fields of villages of
 							Bangladesh. Then the images were pre-processed by resizing and normalization. Images were
@@ -100,10 +101,9 @@
 							K-Nearest Neighbor algorithms. The
 							models performance was evaluated considering accuracy and F1 score. It was found that Random
 							Forest Classifier shows best result
-							than the other models.<br/>
+							than the other models.<br />
 						</p>
-						<img src="assets/project/project-4-2.jpg" alt="" style="width: 60%;">
-						<p><br/>
+						<p class="project-overview"><br />
 							Integrating this system into the backend server of an application, can be used to assist
 							farmers in detecting plant diseases using leaf
 							photos. The user will take a picture of a leaf from an impacted plant with a smartphone or
@@ -113,6 +113,13 @@
 							technology will detect the ailment based on the submitted photograph and deliver its
 							findings to the user.
 						</p>
+						<h3 class="text-center project-color">Method </h3>
+						<img src="assets/project/project-4-1.jpg" alt="">
+						<img src="assets/project/project-4-2.jpg" alt="" style="width: 60%;">
+						<h3 class="text-center project-color">Result </h3>
+						<img src="assets/project/project-4-1.jpg" alt="">
+						<img src="assets/project/project-4-2.jpg" alt="" style="width: 60%;">
+
 					</div>
 				</div>
 			</div>
