--- a/project-5.html
+++ b/project-5.html
@@ -61,16 +61,16 @@
 
 	<div class="container" id="main-content">
 		<div class="row content">
-
 			<!-- About Me -->
 			<div class="col-md-8 offset-md-2 mb-5 active" id="aboutmeContent">
 				<div class="container">
 					<div class="row language">
-						<h4 id="researchinterestsH4" class="mt-2"
+						<h3 id="researchinterestsH4" class="mt-2"
 							data-es="Traffic Object Detection in Real-Time Videos "
 							data-en="Traffic Object Detection in Real-Time Videos ">
-						</h4>
-						<p>
+						</h3>
+						<h3 class="text-center project-color">Overview</h3>
+						<p class="project-overview">
 							The project aims to detect traffic objects in video files using the YOLOv3(You Only Look
 							Once) model for real-time object detection.<br /><br />
 
@@ -84,7 +84,7 @@
 							This project is useful in real-time video analysis where object detection is critical, such
 							as surveillance, traffic monitoring.
 						</p>
-						<p>
+						<p class="project-overview">
 							<strong> Framework & Toolkit:</strong>
 							<ul>
 								<li><strong> YOLO (You Only Look Once) </strong> for object detection</li>
@@ -93,13 +93,13 @@
 								<li><strong>NumPy</strong> for numerical operations</li>
 							</ul>
 						</p>
-						<p>
+						<p class="project-overview">
 							<strong> Usefulness:</strong>
 							<ul>
 								<li> It demonstrates the integration of deep learning with video processing for efficient detection in dynamic environments</li>
 							</ul>
 						</p>
-						<p>
+						<p class="project-overview">
 							<strong> Domain Name:</strong>
 							<ul>
 								<li>  
@@ -107,6 +107,8 @@
 								</li>
 							</ul>
 						</p>
+						<h3 class="text-center project-color">Method </h3>
+						<h3 class="text-center project-color">Result </h3>
 						
 					</div>
 				</div>
