--- a/project-6.html
+++ b/project-6.html
@@ -68,30 +68,55 @@
 			<div class="col-md-8 offset-md-2 mb-5 active" id="aboutmeContent">
 				<div class="container">
 					<div class="row language">
-						<h4 id="researchinterestsH4" class="mt-2" data-es="Áreas de Investigación"
+						<h3 id="researchinterestsH4" class="mt-2" data-es="Áreas de Investigación"
 							data-en="Bugs and Flowers Detection and Classification  Using YOLOv3 and OpenCV">
-						</h4>
-						<img src="assets/project/project-6-1.jpg" alt="">
+						</h3>
+						<h3 class="text-center project-color">Overview</h3>
 						<p>
-							The project aims to detect whether a given image contains flowers or bugs. The YOLOv3 (You Only Look Once) Algorithm is used to accomplish the task. This algorithm utilizes anchor boxes, which are able to detect multiple objects that can even overlap each other. A non-max suppression algorithm is run on each class to avoid showing multiple boxes for the same object. Three hundred images are collected, containing bugs, flowers, both or none and labeled with the LabelImgtool. Then the YOLOv3 model is trained with the custom dataset. The result shows that the model is able to effectively detect the location of bugs and flowers in most cases. This model has shown some difficulty in detecting bugs in some images. However, it effectively detects multiple overlapping images, which is the case in many of the pictures found.
+							The project aims to detect whether a given image contains flowers or bugs. The YOLOv3 (You
+							Only Look Once) Algorithm is used to accomplish the task. This algorithm utilizes anchor
+							boxes, which are able to detect multiple objects that can even overlap each other. A non-max
+							suppression algorithm is run on each class to avoid showing multiple boxes for the same
+							object. Three hundred images are collected, containing bugs, flowers, both or none and
+							labeled with the LabelImgtool. Then the YOLOv3 model is trained with the custom dataset. The
+							result shows that the model is able to effectively detect the location of bugs and flowers
+							in most cases. This model has shown some difficulty in detecting bugs in some images.
+							However, it effectively detects multiple overlapping images, which is the case in many of
+							the pictures found.
 						</p>
-						<img src="assets/project/project-6-2.jpg" alt="">
 						<p>
-							[By extending the scope to other object classes and improving accuracy with larger and more diverse datasets, the project could become an essential tool in precision agriculture, biodiversity studies, and environmental monitoring.]<br>Or [This project demonstrates practical applications of object detection in domains like ecology and agriculture, where identifying bugs and flowers in images can support tasks such as pest control and plant health monitoring]
+							[By extending the scope to other object classes and improving accuracy with larger and more
+							diverse datasets, the project could become an essential tool in precision agriculture,
+							biodiversity studies, and environmental monitoring.]<br>Or [This project demonstrates
+							practical applications of object detection in domains like ecology and agriculture, where
+							identifying bugs and flowers in images can support tasks such as pest control and plant
+							health monitoring]
 						</p>
-						<img src="assets/project/project-6-3.jpg" alt="">
-						<p>This project can be used for automated pest detection and crop monitoring in agriculture, wildlife conservation, and environmental research.</p>
-						<img src="assets/project/project-6-4.jpg" alt="">
+						<p>This project can be used for automated pest detection and crop monitoring in agriculture,
+							wildlife conservation, and environmental research.</p>
 						<p>
 							<strong>Frameworks and Toolkits Used:</strong><br>
-							<ul>
-								<li><strong>Framework:</strong> YOLOv3 (You Only Look Once, version 3)</li>
-								<li><strong>Toolkit:</strong> OpenCV (for image processing and display), NumPy (for numerical operations)</li>
-								<li><strong>Environment:</strong> Python</li>
-								<li><strong>Darknet framework:</strong> Not used directly in the project.</li>
-								<li><strong>Darknet files</strong> (.cfg and .weights): Utilized with OpenCV's DNN module</li>
-							</ul>
+						<ul>
+							<li><strong>Framework:</strong> YOLOv3 (You Only Look Once, version 3)</li>
+							<li><strong>Toolkit:</strong> OpenCV (for image processing and display), NumPy (for
+								numerical operations)</li>
+							<li><strong>Environment:</strong> Python</li>
+							<li><strong>Darknet framework:</strong> Not used directly in the project.</li>
+							<li><strong>Darknet files</strong> (.cfg and .weights): Utilized with OpenCV's DNN module
+							</li>
+						</ul>
 						</p>
+						<h3 class="text-center project-color">Method </h3>
+						<img src="assets/project/project-6-1.jpg" alt="">
+						<img src="assets/project/project-6-2.jpg" alt="">
+						<img src="assets/project/project-6-3.jpg" alt="">
+						<img src="assets/project/project-6-4.jpg" alt="">
+						<img src="assets/project/project-6-5.jpg" alt="">
+						<h3 class="text-center project-color">Result </h3>
+						<img src="assets/project/project-6-1.jpg" alt="">
+						<img src="assets/project/project-6-2.jpg" alt="">
+						<img src="assets/project/project-6-3.jpg" alt="">
+						<img src="assets/project/project-6-4.jpg" alt="">
 						<img src="assets/project/project-6-5.jpg" alt="">
 					</div>
 				</div>
