--- a/project-7.html
+++ b/project-7.html
@@ -68,12 +68,12 @@
 			<div class="col-md-8 offset-md-2 mb-5 active" id="aboutmeContent">
 				<div class="container">
 					<div class="row language">
-						<h4 id="researchinterestsH4" class="mt-2"
+						<h3 id="researchinterestsH4" class="mt-2"
 							data-es="SecurityCat: A Simple Ultrasonic Radar System"
 							data-en="SecurityCat: A Simple Ultrasonic Radar System">
-						</h4>
-						<img src="assets/project/project-6-1.jpg" alt="">
-						<p>
+						</h3>
+						<h3 class="text-center project-color">Overview</h3>
+						<p class="project-overview">
 						<ul>
 							<li>
 								The project aims to detect whether a given image contains flowers or bugs. The YOLOv3
@@ -88,15 +88,16 @@
 								images, which is the case in many of the pictures found.
 							</li>
 							<li>
-								An ultrasonic sensor is attached to an Arduino microcontroller to build the 
-								system. The TRIG pin is used to send sound waves, and the ECHO pin is 
-								used to receive them. A servo motor is connected to the Arduino, which 
-								rotates the sensor in small steps (15° to 165°) to cover a wide area. A 
-								<strong>buzzer</strong> is added to the system to provide alerts when an object is close to 
-								less than 10cm. Arduino IDE platform is used to write the code to control 
-								the servo motor, calculate distances, and activate the buzzer when an 
-								object is detected within a close range. The Processing IDE is used to create 
-								a radar display on the computer by writing code to visualize object 
+								An ultrasonic sensor is attached to an Arduino microcontroller to build the
+								system. The TRIG pin is used to send sound waves, and the ECHO pin is
+								used to receive them. A servo motor is connected to the Arduino, which
+								rotates the sensor in small steps (15° to 165°) to cover a wide area. A
+								<strong>buzzer</strong> is added to the system to provide alerts when an object is close
+								to
+								less than 10cm. Arduino IDE platform is used to write the code to control
+								the servo motor, calculate distances, and activate the buzzer when an
+								object is detected within a close range. The Processing IDE is used to create
+								a radar display on the computer by writing code to visualize object
 								positions based on the sensor data.
 							</li>
 							<li>This project can be used as a security system to detect intruders.</li>
@@ -104,39 +105,45 @@
 						</ul>
 						</p>
 						<h3>Equipment</h3>
+						<p class="project-overview">
+						<ul>
+							<li>Domain : Embedded Systems and IoT (Internet of Things)</li>
+							<li>Tools and Components Needed</li>
+						</ul>
+						</p>
+						<p class="project-overview">
+						<h5>1.Hardware:</h5>
+						<ul>
+							<ol>Arduino microcontroller</ol>
+							<ol>Ultrasonic sensor</ol>
+							<ol>Servo motor</ol>
+							<ol>LED and buzzer</ol>
+							<ol>Wires and a breadboard</ol>
+						</ul>
+						</p>
+						<p class="project-overview">
+						<h5>2.Software:</h5>
+						<ul>
+							<ol><strong> Arduino IDE: </strong>To program the Arduino.</ol>
+							<ol><strong> Processing IDE: </strong>To make the radar display on the computer.</ol>
+						</ul>
+						</p>
+						<p class="project-overview">
+						<ul>
+							<li> Project link online <a href="https://robu.in/arduino-radar-project-ultrasonic-based-radarconnection-and-code/"
+								target="_blank">Click</a></li>
+						</ul>
+						
+						</p>
+
+						<h3 class="text-center project-color">Method </h3>
 						<img src="assets/project/project-7-1.jpg" alt="">
-						<p>
-							<ul>
-								<li>Domain : Embedded Systems and IoT (Internet of Things)</li>
-								<li>Tools and Components Needed</li>
-							</ul>
-						</p>
-						<p>
-							<h5>1.Hardware:</h5>
-							<ul>
-								<ol>Arduino microcontroller</ol>
-								<ol>Ultrasonic sensor</ol>
-								<ol>Servo motor</ol>
-								<ol>LED and buzzer</ol>
-								<ol>Wires and a breadboard</ol>
-							</ul>
-						</p>
-						<p>
-							<h5>2.Software:</h5>
-							<ul>
-								<ol><strong> Arduino IDE: </strong>To program the Arduino.</ol>
-								<ol><strong> Processing IDE: </strong>To make the radar display on the computer.</ol>
-							</ul>
-						</p>
 						<img src="assets/project/project-7-2.jpg" alt="">
 						<img src="assets/project/project-7-3.jpg" alt="">
-						
-						<p>
-							<ul>
-								<li> Project link online</li>
-							</ul>
-							<a href="https://robu.in/arduino-radar-project-ultrasonic-based-radarconnection-and-code/" target="_blank"></a>
-						</p>
+						<h3 class="text-center project-color">Result </h3>
+						<img src="assets/project/project-7-1.jpg" alt="">
+						<img src="assets/project/project-7-2.jpg" alt="">
+						<img src="assets/project/project-7-3.jpg" alt="">
 					</div>
 				</div>
 			</div>
