--- a/project-3.html
+++ b/project-3.html
@@ -68,20 +68,19 @@
 			<div class="col-md-8 offset-md-2 mb-5 active" id="aboutmeContent">
 				<div class="container">
 					<div class="row language">
-						<h4 id="researchinterestsH4" class="mt-2" data-es="Enhancing Classification Robustness: Stability Analysis of Fuzzy and Shannon Entropy of Image under Noisy 
+						<h3 id="researchinterestsH4" class="mt-2 project-color" data-es="Enhancing Classification Robustness: Stability Analysis of Fuzzy and Shannon Entropy of Image under Noisy 
 						Environment" data-en="Enhancing Classification Robustness: Stability Analysis of Fuzzy and Shannon Entropy of Image under Noisy 
 							Environment">
-						</h4>
-						<img src="assets/project/project-3-1.jpg" alt=""><br/>
-						<p>
+						</h3>
+						<h3 class="text-center project-color">Overview</h3>
+						<p class="project-overview">
 							Considering the ubiquity of digital images and their noise issues during acquisition, this
 							study aims to explores the
 							concepts of Fuzzy entropy and Shannon entropy as potential features to enhance image
 							recognition in noisy
 							conditions.
 						</p>
-						<img src="assets/project/project-3-2.jpg" alt=""><br/>
-						<p>
+						<p class="project-overview">
 							To obtain this goal: A formulated algorithm is used to determine fuzzy entropy, its maximum
 							value varying six parameters for
 							all the input images. Shannon entropy is calculated from grayscale image directly. Then the
@@ -94,17 +93,14 @@
 							under noisy
 							environment.
 						</p>
-						<img src="assets/project/project-3-3.jpg" alt=""><br/>
-						<p>
+						<p class="project-overview">
 							From the analysis, fuzzy entropy is found more stable against SNR. Again, fuzzy entropy
 							parameters combined
 							with MLs classifiers show better stability of accuracy with variation of SNR compared to CNN
 							and LSTM where images were
 							applied directly.
 						</p>
-						<img src="assets/project/project-3-4.jpg" alt=""><br/>
-						<img src="assets/project/project-3-5.jpg" alt=""><br/>
-						<p>
+						<p class="project-overview">
 							This study, proves the effectiveness of fuzzy entropy as a feature. Future of this work
 							includes: combine the ‘fuzzy
 							entropy vector’ with other features like SURF, SIFT, HOG, DWT parameters etc., to observe
@@ -115,8 +111,24 @@
 							accuracy of detection and
 							the same technique will also be used on other two multimedia data: audio and video.
 						</p>
-						<img src="assets/project/project-3-6.jpg" alt=""><br/>
-						<img src="assets/project/project-3-7.jpg" alt=""><br/>
+
+						<h3 class="text-center project-color">Method </h3>
+						<img src="assets/project/project-3-1.jpg" alt=""><br />
+						<img src="assets/project/project-3-2.jpg" alt=""><br />
+						<img src="assets/project/project-3-3.jpg" alt=""><br />
+						<img src="assets/project/project-3-4.jpg" alt=""><br />
+						<img src="assets/project/project-3-5.jpg" alt=""><br />
+						<img src="assets/project/project-3-6.jpg" alt=""><br />
+						<img src="assets/project/project-3-7.jpg" alt=""><br />
+						<h3 class="text-center project-color">Result </h3>
+						<img src="assets/project/project-3-1.jpg" alt=""><br />
+						<img src="assets/project/project-3-2.jpg" alt=""><br />
+						<img src="assets/project/project-3-3.jpg" alt=""><br />
+						<img src="assets/project/project-3-4.jpg" alt=""><br />
+						<img src="assets/project/project-3-5.jpg" alt=""><br />
+						<img src="assets/project/project-3-6.jpg" alt=""><br />
+						<img src="assets/project/project-3-7.jpg" alt=""><br />
+
 					</div>
 				</div>
 			</div>
