--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						</a>
 					</li>
 
-					
+
 					<li class="nav-item">
 						<a class="nav-link" id="mis" href="#" data-en="Work Experience">
 						</a>
@@ -122,18 +122,17 @@
 
 				<div class="d-none" id="contadorVisitas"></div>
 
-				<p class="t-secondary mb-4" data-en="Dhaka Bangladesh">
+				<p class="t-secondary mb-4" data-en="Lecturer, University of Liberal Arts Bangladesh">
 				</p>
 
 				<div class="row mb-2">
 					<div class="col-1">
-						<i class="fal fa-map-marker-alt" aria-hidden="true"></i>
+						<i class="fal fa-map-marker-alt project-color" aria-hidden="true"></i>
 					</div>
 
 					<div class="col-10">
 						<span data-en=" Dhaka">
 						</span>
-						<br>
 						1207,
 						<span data-en="Bangladesh">
 						</span>
@@ -142,7 +141,7 @@
 
 				<div class="row mb-2">
 					<div class="col-1">
-						<i class="ai ai-cv" aria-hidden="true"></i>
+						<i class="ai ai-cv project-color" aria-hidden="true"></i>
 					</div>
 
 					<div class="col-10">
@@ -153,7 +152,7 @@
 
 				<div class="row mb-2">
 					<div class="col-1">
-						<i class="fa-regular fa-envelope" aria-hidden="true"></i>
+						<i class="fa-regular fa-envelope project-color" aria-hidden="true"></i>
 					</div>
 
 					<div class="col-10">
@@ -166,7 +165,7 @@
 					  </a> -->
 				<div class="row mb-2">
 					<div class="col-1">
-						<i class="fa-brands fa-google" aria-hidden="true"></i>
+						<i class="fa-brands fa-google project-color" aria-hidden="true"></i>
 					</div>
 
 					<div class="col-10">
@@ -177,7 +176,7 @@
 
 				<div class="row mb-2">
 					<div class="col-1">
-						<i class="fa-brands fa-linkedin" aria-hidden="true"></i>
+						<i class="fa-brands fa-linkedin project-color" aria-hidden="true"></i>
 					</div>
 
 					<div class="col-10">
@@ -188,7 +187,7 @@
 
 				<div class="row mb-2">
 					<div class="col-1">
-						<i class="fa-brands fa-twitter" aria-hidden="true"></i>
+						<i class="fa-brands fa-twitter project-color" aria-hidden="true"></i>
 					</div>
 
 					<div class="col-10">
@@ -331,117 +330,35 @@
 						<!-- First Card -->
 						<div class="card mb-3 shadow-sm">
 							<div class="card-body d-flex align-items-center">
-								<div class="me-3">
-									<span class="badge bg-primary rounded-circle p-3">
-										<i class="bi bi-check-circle text-white"></i>
-									</span>
-								</div>
 								<div>
 									<p class="mb-1">
-										<strong>(1) F. Jahara, O. Sharif, and M. M. Hoque</strong>, -
-										<a href="#" class="text-decoration-none">Automatic Categorization of News
-											Articles and Headlines using Multilayer Perceptron</a>,
+										<strong>Tanjim Taharat Aurpa, Fatema Khan, Md Musfique Anwar</strong>, -
+										<a href="https://ieeexplore.ieee.org/document/9230994" target="_blank"
+											class="text-decoration-none">Conference Proceedings (Published:
+											1)</a>,
 									</p>
-									<p class="mb-0">in International Conference on Intelligent Computing & Optimization.
-										Springer, 2021.</p>
+									<p class="mb-0">Discovering and Tracking Query Oriented Topical Clusters in Online
+										Social
+										Networks. 2020 IEEE Region 10 Symposium (TENSYMP). June, 2020. (Best Paper
+										Award) (Indexed by Scopus) |
+										<a href="https://ieeexplore.ieee.org/document/9230994"
+											target="_blank">[paper]</a>
+									</p>
 								</div>
 							</div>
 						</div>
 						<!-- Second Card -->
 						<div class="card mb-3 shadow-sm">
 							<div class="card-body d-flex align-items-center">
-								<div class="me-3">
-									<span class="badge bg-primary rounded-circle p-3">
-										<i class="bi bi-check-circle text-white"></i>
-									</span>
-								</div>
 								<div>
 									<p class="mb-1">
-										<strong>(2) F. Jahara, A. Barua, M. A. Iqbal, A. Das, O. Sharif, M. M. Hoque,
-											and I. H. Sarker</strong>, -
-										<a href="#" class="text-decoration-none">Towards pos tagging methods for Bengali
-											language: A comparative analysis</a>,
+										<strong><u>Fatema Khan</u>, Md. Imdadul Islam, Sarwar Jahan</strong>, -
+										<a href="#" class="text-decoration-none">Journal Articles (Under review: 1)</a>,
 									</p>
-									<p class="mb-0">in International Conference on Intelligent Computing & Optimization.
-										Springer, 2020, pp. 1111-1123.</p>
-								</div>
-							</div>
-						</div>
-						<!-- First Card -->
-						<div class="card mb-3 shadow-sm">
-							<div class="card-body d-flex align-items-center">
-								<div class="me-3">
-									<span class="badge bg-primary rounded-circle p-3">
-										<i class="bi bi-check-circle text-white"></i>
-									</span>
-								</div>
-								<div>
-									<p class="mb-1">
-										<strong>(1) F. Jahara, O. Sharif, and M. M. Hoque</strong>, -
-										<a href="#" class="text-decoration-none">Automatic Categorization of News
-											Articles and Headlines using Multilayer Perceptron</a>,
+									<p class="mb-0">Enhancing Classification Robustness: Stability Analysis of Fuzzy and
+										Shannon Entropy of Image under Noisy Environment. Journal of Visual
+										Communication and Image Representation. (Impact Factor – 2.6) | [Under Review]
 									</p>
-									<p class="mb-0">in International Conference on Intelligent Computing & Optimization.
-										Springer, 2021.</p>
-								</div>
-							</div>
-						</div>
-						<!-- Second Card -->
-						<div class="card mb-3 shadow-sm">
-							<div class="card-body d-flex align-items-center">
-								<div class="me-3">
-									<span class="badge bg-primary rounded-circle p-3">
-										<i class="bi bi-check-circle text-white"></i>
-									</span>
-								</div>
-								<div>
-									<p class="mb-1">
-										<strong>(2) F. Jahara, A. Barua, M. A. Iqbal, A. Das, O. Sharif, M. M. Hoque,
-											and I. H. Sarker</strong>, -
-										<a href="#" class="text-decoration-none">Towards pos tagging methods for Bengali
-											language: A comparative analysis</a>,
-									</p>
-									<p class="mb-0">in International Conference on Intelligent Computing & Optimization.
-										Springer, 2020, pp. 1111-1123.</p>
-								</div>
-							</div>
-						</div>
-						<!-- First Card -->
-						<div class="card mb-3 shadow-sm">
-							<div class="card-body d-flex align-items-center">
-								<div class="me-3">
-									<span class="badge bg-primary rounded-circle p-3">
-										<i class="bi bi-check-circle text-white"></i>
-									</span>
-								</div>
-								<div>
-									<p class="mb-1">
-										<strong>(1) F. Jahara, O. Sharif, and M. M. Hoque</strong>, -
-										<a href="#" class="text-decoration-none">Automatic Categorization of News
-											Articles and Headlines using Multilayer Perceptron</a>,
-									</p>
-									<p class="mb-0">in International Conference on Intelligent Computing & Optimization.
-										Springer, 2021.</p>
-								</div>
-							</div>
-						</div>
-						<!-- Second Card -->
-						<div class="card mb-3 shadow-sm">
-							<div class="card-body d-flex align-items-center">
-								<div class="me-3">
-									<span class="badge bg-primary rounded-circle p-3">
-										<i class="bi bi-check-circle text-white"></i>
-									</span>
-								</div>
-								<div>
-									<p class="mb-1">
-										<strong>(2) F. Jahara, A. Barua, M. A. Iqbal, A. Das, O. Sharif, M. M. Hoque,
-											and I. H. Sarker</strong>, -
-										<a href="#" class="text-decoration-none">Towards pos tagging methods for Bengali
-											language: A comparative analysis</a>,
-									</p>
-									<p class="mb-0">in International Conference on Intelligent Computing & Optimization.
-										Springer, 2020, pp. 1111-1123.</p>
 								</div>
 							</div>
 						</div>
@@ -657,19 +574,30 @@
 						<h5>Workera, Palo Alto, California, United States</h5>
 						<span>- Senior Assessment Developer (January 2023 – Present)</span>
 						<ul class="mt-3">
-							<li><i class="bi bi-check-circle-fill check-icon"></i>Serve as the Primary Subject Matter Expert developing assessments for Generative AI (tech and non-tech), Diffusion Models, Large Language Models, and others.</li>
-							<li><i class="bi bi-check-circle-fill check-icon"></i>Engineer prompts to integrate LLMs (ChatGPT, Bing, Claude, Bing Chat) into the assessment development pipeline.</li>
-							<li><i class="bi bi-check-circle-fill check-icon"></i>Implemented an adaptive time allocation system for the Workera GOAT™ (Generative Ontology & Authoring Tool).</li>
+							<li><i class="bi bi-check-circle-fill check-icon"></i>Serve as the Primary Subject Matter
+								Expert developing assessments for Generative AI (tech and non-tech), Diffusion Models,
+								Large Language Models, and others.</li>
+							<li><i class="bi bi-check-circle-fill check-icon"></i>Engineer prompts to integrate LLMs
+								(ChatGPT, Bing, Claude, Bing Chat) into the assessment development pipeline.</li>
+							<li><i class="bi bi-check-circle-fill check-icon"></i>Implemented an adaptive time
+								allocation system for the Workera GOAT™ (Generative Ontology & Authoring Tool).</li>
 						</ul>
 					</div>
-			
+
 					<div class="experience">
 						<h5>Workera, Palo Alto, California, United States</h5>
 						<span>- Assessment Developer (February 2021 – January 2023)</span>
 						<ul class="mt-3">
-							<li><i class="bi bi-check-circle-fill check-icon"></i>Developed assessments and learning plans as the Primary Subject Matter Expert for Natural Language Processing, Computer Vision, Automatic Speech Recognition, TensorFlow, and PyTorch. Collaborated on MLOps, Responsible AI, AI Communication, Digital Literacy, Data Analytics, and Web Applications.</li>
-							<li><i class="bi bi-check-circle-fill check-icon"></i>Led a Role Delineation Study as a Committee Co-Chair and an SME to align domains with evolving industry roles.</li>
-							<li><i class="bi bi-check-circle-fill check-icon"></i>Partnered on cross-departmental projects focusing on score calibration, skills alignment, learning pathway standardization, and beta testing for Computer Adaptive Tests (CATs).</li>
+							<li><i class="bi bi-check-circle-fill check-icon"></i>Developed assessments and learning
+								plans as the Primary Subject Matter Expert for Natural Language Processing, Computer
+								Vision, Automatic Speech Recognition, TensorFlow, and PyTorch. Collaborated on MLOps,
+								Responsible AI, AI Communication, Digital Literacy, Data Analytics, and Web
+								Applications.</li>
+							<li><i class="bi bi-check-circle-fill check-icon"></i>Led a Role Delineation Study as a
+								Committee Co-Chair and an SME to align domains with evolving industry roles.</li>
+							<li><i class="bi bi-check-circle-fill check-icon"></i>Partnered on cross-departmental
+								projects focusing on score calibration, skills alignment, learning pathway
+								standardization, and beta testing for Computer Adaptive Tests (CATs).</li>
 						</ul>
 					</div>
 				</div>
